# echelon

./: .aiignore  .gitignore  Cargo.toml  clippy.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config_ci.toml
.github/workflows/: ci.yaml
src/: character.rs  lib.rs  main.rs  scene.rs
src/character/: mod.rs
src/scene/: mod.rs
